# random_tester

./: Cargo.toml  README.md
src/: chisqr.rs  cli.rs  entest.rs  lib.rs  mc.rs  mean.rs  sc.rs  shannon.rs  tests.rand  tests.rs
