[package]
authors = ["Michael Lodder <redmike7@gmail.com>", "Delta 4 <156182500+delta4chat@users.noreply.github.com>"]
description = "A rust implementation similar to ent tool: https://www.fourmilab.ch/random/"
documentation = "https://docs.rs/entest"
edition = "2021"
homepage = "https://docs.rs/random_tester"
license = "Apache-2.0"
name = "entest"
repository = "https://github.com/delta4chat/random_tester"
version = "0.1.0"

[dependencies]
#fastnum = { path = "../fastnum", default-features = false }
fastnum = { git = "https://github.com/delta4chat/fastnum", default-features = false }
#fastnum = { version = "0.2.2", default-features = false }

clap = { optional = true, version = "4.5.34", features = ["derive"] }

[features]
default = []
std = ["fastnum/std"]
cli = ["std", "dep:clap"]

[[bin]]
name = "entest"
path = "src/cli.rs"
required-features = ["cli"]

