[package]
authors = ["Michael Lodder <redmike7@gmail.com>", "Delta 4 <156182500+delta4chat@users.noreply.github.com>"]
description = "A rust implementation similar to ent tool: https://www.fourmilab.ch/random/"
documentation = "https://docs.rs/entest"
edition = "2021"
license = "Apache-2.0"
name = "entest"
repository = "https://github.com/delta4chat/random_tester"
version = "0.2.1"

[dependencies]
#fastnum = { path = "../fastnum", default-features = false }
#fastnum = { git = "https://github.com/delta4chat/fastnum", default-features = false }
#fastnum = { version = "0.2.2", default-features = false }

fastnum2 = { version = "0.3.2", default-features = false }

clap = { optional = true, version = "4.5.34", features = ["derive"] }

[features]
default = []
std = ["fastnum2/std"]
cli = ["std", "dep:clap"]

[[bin]]
name = "entest"
path = "src/cli.rs"
required-features = ["cli"]

[profile.dev]
panic = "unwind"
opt-level = 2
lto = "off"
#strip = "none"
codegen-units = 256
overflow-checks = true
debug-assertions = true
debug = "limited"
incremental = true

[profile.release]
panic = "unwind"
opt-level = 3
lto = true
strip = true
codegen-units = 1
overflow-checks = true
debug-assertions = false
debug = 1
incremental = false


